--- a/practice.html
+++ b/practice.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <h1>Welcome to GitHub</h1>
+    <h1>Welcome to GitHub Mastery!!</h1>
+    <p>Thank you for everyone!!</p>
 </body>
 
 </html>
