--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Welcome to GitHub Mastery!!</h1>
     <p>Thank you for everyone!!</p>
+    <P>GitHub Desktop</P>
 </body>
 
 </html>
